# fake-sirh-2

./: .gitignore  LICENSE  README.TXT  README.md  USAGE_GUIDE.md  config.py  config.yaml  config_flow_solutions.yaml  database.py  foundations.md  gen_data.yaml  learn neo4j.txt  learn neo4j.xlsx  learn nepo4j cheat sheet.md  llm_client.py  main.py  main.py.alt  pyproject.toml  requirements.in  requirements.sh  requirements.txt  schema.sql  start_api.py  to_do.md  to_do.v2.md  to_do_employee.md  to_do_observe.md  to_do_sirh.md  tout.html  tout.txt  utils_llm.py
core/: database.py
db/: fake_sirh.sqlite-journal
etapes/: e00_initialisation.py  e01_structure_organisationnelle.py  e02_population_hierarchie.py  e03_competences_referentiels.py  e04_objectifs_performance.py  e05_formations_developpement.py  e06_feedback_documents.py  e07_rag_indexation.py
graph_sync/: README.md  cli.py
intendance/: count_lines.py
prompts/: 01_headcount_plan_generation.txt  01_organizational_structure.txt  01a_organizational_scaffolding.txt  01b_department_deep_dive.txt  02_employee_generation.txt  03_employee_skills_assignment.txt  03_skills_generation.txt  04_goals_generation.txt  04_performance_review.txt  05_training_assignment.txt  05_training_catalog.txt  06_document_generation.txt  06_document_generation.v0.txt  06_feedback_generation.txt
rag/: api.py  chain.py  config.py  document_loader.py  graph_retriever.py  router.py  router_config.yaml  sql_retriever.py  start_rag_api.py  vectorstore.py
rag_system/: api.py  chain.py  graph_retriever.py  memory.py  router_config.yaml  (+1 more)
(+160 files in other folders)
