[project]
name = "fake-sirh-2"
version = "0.0.1"
description = "SIRH fake et rag minimaliste pour POC et démos"
authors = [
  { name = "fake-sirh-2", email = "damien@iod.nc" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "*"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
